Fixed the overflow issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body{
   margin: 0;
+  padding: 0;
+  min-width: 0; 
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -8,8 +10,8 @@ body{
 }
 .intro{
   background-color: #1E1E1E;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 115px 185px 701px 950px;
   justify-content: flex-end;
   align-items: center; 
@@ -20,13 +22,14 @@ body{
   flex-shrink: 0;
 }
 .main-heading{
-  align: left;
-  width: 600px;
-  height: 260px; 
+  width: 100%;
+  height: 100%;
+  max-width: 1500px;
+  max-height: 260px; 
   flex-shrink: 0; 
   color: #FFF;
   font-family: Inter;
-  font-size: 120px;
+  font-size: 250px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -38,13 +41,16 @@ body{
   max-height: 400px;
   max-width: 400px;
   object-fit: cover;
+  float: right;
+  display: inline;
   border-radius: 400px;
 }
 
 .about{
   background: #73C2BE; 
   display: inline-flex;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 125px 115px 733px 725px;
   justify-content: flex-end;
   align-items: center; 
@@ -75,10 +81,10 @@ body{
 .projects{
   background: #776885; 
   justify-content: flex-end;
-  width: 100%;
-  height: 100%;
   padding: 79px 870px 795px 70px;
   align-items: center; 
+  max-width: 100%;
+  max-height: 100%;
 }
 .carousel {
   position: relative;
@@ -125,8 +131,8 @@ body{
 }
 
 .skills{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 115px 185px 701px 950px;
   justify-content: flex-end;
   align-items: center; 
@@ -144,8 +150,8 @@ body{
   line-height: normal; 
 }
 .contact{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 115px 185px 701px 950px;
   justify-content: flex-end;
   align-items: center; 
